@@ -1,6 +1,7 @@
 2009-01-15  Sam Steingold  <sds@gnu.org>
 
 	* m4/general.m4 (CL_MODULE_COMMON_CHECKS): move AC_CONFIG_AUX_DIR up
+	(CL_CONFIG_SUBDIRS): remove unused obsolete macro
 
 2009-01-14  Sam Steingold  <sds@gnu.org>
 
